# FastAPI_project

./: .dockerignore  .env.example  .env.test  .gitignore  Procfile  README.md  alembic.ini  docker-compose_dev.yml  docker-compose_prod.yml  dockerfile  gunicorn.service  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 076fc57fcbfe_add_phone_number_to_users.py  0ac2d9d6c3f7_add_foreign_key_to_posts_table.py  131f3c82b0c9_create_posts_table.py  1b73bee4774b_add_last_columns_to_posts_table.py  a23e63ec9817_add_content_column_to_posts_table.py  afa7a41a1a18_auto_vote.py  f3a2c8fa7a52_add_user_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_posts.py  test_users.py
